# gemini-rs

./: .gitignore  Cargo.toml  README.md
examples/: function_call.rs  function_calling.rs  generate_image.rs  streaming.rs  test.rs
src/: chat.rs  client.rs  lib.rs  stream.rs  types.rs
