[package]
name = "gemini-rs"
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = [
    "gvozdvmozgu <gvozdvmozgu@gmail.com>",
    "Shuflduf <shuflduf@shuflduf.xyz>",
]
description = "A library to interact with the Google Gemini API"
homepage = "https://github.com/Shuflduf/gemini-rs"
repository = "https://github.com/Shuflduf/gemini-rs"
readme = "README.md"
keywords = ["ai", "google", "gemini"]

[dependencies]
bytes = "1.10.1"
futures = "0.3"
reqwest = { version = "0.12.19", features = ["stream", "json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
base64 = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { version = "1.43", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[features]
default = []
use-base64 = ["base64"]